--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Samåknings app"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="datedropper.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
