Change default HTML styling to our design

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,14 @@
       content="Samåknings app"
     />
     
+    <!-- Base styling. Removing default padding/margin. Adding default background color -->
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        background-color: #1a1a1a;
+      }
+    </style>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
