--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,9 +11,13 @@
     
     <!-- Base styling. Removing default padding/margin. Adding default background color -->
     <style>
-      body {
+      * {
         padding: 0;
         margin: 0;
+        box-sizing: border-box;
+      }
+
+      body {
         background-color: #1a1a1a;
       }
     </style>
