--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,18 @@
       body {
         background-color: #1a1a1a;
       }
+
+      ::-webkit-scrollbar {
+        width: 5px;               /* width of the entire scrollbar */
+        height: 5px;
+      }
+      ::-webkit-scrollbar-track {
+        background: none;        /* color of the tracking area */
+      }
+      ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.7);    /* color of the scroll thumb */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+      }
     </style>
     
     <!--
